# Moving-Phong-Light

./: CMakeLists.txt  README.md
dependencies/glad/: glad.h
src/: Sphere.cpp  Sphere.h  config.h  glad.c  main.cpp
